--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.6</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.testng</groupId>
