--- a/pom.xml
+++ b/pom.xml
@@ -190,5 +190,38 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>buildMacExecutable</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>osxappbundle-maven-plugin</artifactId>
+                        <version>1.0-alpha-2</version>
+                        <configuration>
+                            <mainClass>ru.maxbrainrus.app.CommandLineRunner</mainClass>
+                            <jvmVersion>1.8.0</jvmVersion>
+                            <!--<iconFile>${basedir}/build-resources/osx/icons/application.icns</iconFile>-->
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>bundle</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 
 </project>
